# openenv-metahackatonproject

./: .env.example  .gitignore  Dockerfile  README.md  api.py  app.py  env.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
data/: easy_samples.json  hard_samples.json  medium_samples.json
graders/: grader1.py  grader2.py  grader3.py
server/: app.py
tasks/: __init__.py  task1_easy.py  task2_medium.py  task3_hard.py
