[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "hallucination-detection-env"
version = "2.0.0"
description = "A reinforcement learning environment for hallucination detection"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn",
    "pydantic",
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
env_class = "HallucinationEnv"
env_module = "env"
entry_point = "server.app:main"
port = 7860
